After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679120 - rtsp: Fix mingw-w64 compiler warning
rtsp: Fix mingw-w64 compiler warning
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.10.x
Other Windows
: Normal trivial
: 0.10.37
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-29 10:06 UTC by Raimo Järvi
Modified: 2012-09-07 14:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compiler warning (747 bytes, patch)
2012-06-29 10:09 UTC, Raimo Järvi
none Details | Review

Description Raimo Järvi 2012-06-29 10:06:15 UTC
Warning on mingw-w64:

gstrtspconnection.c:80:0: error: "EINPROGRESS" redefined
/usr/x86_64-w64-mingw32/sys-root/mingw/include/errno.h:158:0: note: this is the location of the previous definition

EINPROGRESS is not used in the Windows code, so it should be safe to remove.
Comment 1 Raimo Järvi 2012-06-29 10:09:22 UTC
Created attachment 217597 [details] [review]
Fix compiler warning
Comment 2 Wim Taymans 2012-09-07 14:35:29 UTC
commit 5f314bcdb90fa8667fb745b6f9cf223ff021b921
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Fri Jun 29 12:55:51 2012 +0300

    rtsp: Fix compiler warning
    
    https://bugzilla.gnome.org/show_bug.cgi?id=679120