rtsp: Fix compiler warning

https://bugzilla.gnome.org/show_bug.cgi?id=679120